<resources>
    <string name="app_name">ND940C3-Project</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>


    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The repository is downloaded</string>
    <string name="notification_button">See changes</string>

    <string name="button_name">Click me</string>
    <string name="button_loading">We are loading </string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="download_glide">Glide picture lib by Bumptech</string>
    <string name="download_udacity">Udacity starter project</string>
    <string name="download_retrofit">Retrofit - Android HTTP Lib</string>
    <string name="download_none">Please select the file to download</string>
    <string name="channel_name">Download Notifications</string>
    <string name="button_download">Download</string>
    <string name="text_file_name">File Name:</string>
    <string name="text_status">Status:</string>
    <string name="button_ok">Okay</string>
</resources>
