<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <ImageView
        android:id="@+id/imageView"

        android:layout_width="0dp"
        android:layout_height="100dp"

        android:background="#009688"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/icloud_download" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintBottom_toTopOf="@+id/custom_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <RadioButton
            android:id="@+id/radio_glide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/download_glide" />

        <RadioButton
            android:id="@+id/radio_udacity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/download_udacity" />

        <RadioButton
            android:id="@+id/radio_retrofit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/download_retrofit" />
    </RadioGroup>


    <com.udacity.LoadingButton
        android:id="@+id/custom_button"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_margin="20dp"
        app:buttonIdleColor="@color/colorPrimary"
        app:buttonInProgressColor="@color/colorPrimaryDark"
        app:idleText="Test"
        app:inProgressText="Test2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>